--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@hookform/resolvers": "^2.9.8",
     "@radix-ui/react-dialog": "^1.0.0",
     "@vime/core": "^5.3.3",
